# ChangeLog for x11-wm/qtile
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/qtile/ChangeLog,v 1.15 2015/02/25 18:14:43 radhermit Exp $

*qtile-0.9.1 (25 Feb 2015)

  25 Feb 2015; Tim Harder <radhermit@gentoo.org> +qtile-0.9.1.ebuild,
  qtile-9999.ebuild:
  Version bump, disable docs until required sphinx extensions are in the tree.

  20 Jan 2015; Tim Harder <radhermit@gentoo.org> qtile-9999.ebuild:
  Use https git repo URL.

  20 Jan 2015; Tim Harder <radhermit@gentoo.org> qtile-9999.ebuild:
  Drop old pycairo and xpyb deps.

  05 Jan 2015; Tim Harder <radhermit@gentoo.org> qtile-9999.ebuild:
  Update deps.

*qtile-0.8.0 (27 Aug 2014)

  27 Aug 2014; Tim Harder <radhermit@gentoo.org> +qtile-0.8.0.ebuild:
  Version bump.

*qtile-0.7.0 (04 Apr 2014)

  04 Apr 2014; Tim Harder <radhermit@gentoo.org> +qtile-0.7.0.ebuild,
  qtile-9999.ebuild:
  Version bump.

  07 Sep 2013; Tim Harder <radhermit@gentoo.org> qtile-9999.ebuild:
  Convert to git-r3 eclass and use HTML_DOCS.

  22 May 2013; Maxim Koltsov <maksbotan@gentoo.org> qtile-0.5-r1.ebuild,
  qtile-0.6.ebuild, qtile-9999.ebuild:
  Return multiple python support as xpyb is fixed now.

  21 May 2013; Tim Harder <radhermit@gentoo.org> qtile-0.5-r1.ebuild,
  qtile-0.6.ebuild, qtile-9999.ebuild:
  Fix python deps and only support a single implementation until xpyb allows
  multiple.

  16 May 2013; Tim Harder <radhermit@gentoo.org> qtile-0.5-r1.ebuild:
  Update python use flag deps.

  16 May 2013; Tim Harder <radhermit@gentoo.org> -qtile-0.5.ebuild:
  Remove old.

*qtile-0.6 (16 May 2013)

  16 May 2013; Tim Harder <radhermit@gentoo.org> +qtile-0.6.ebuild,
  qtile-9999.ebuild:
  Version bump and update live ebuild.

  06 Mar 2013; Maxim Koltsov <maksbotan@gentoo.org> qtile-9999.ebuild:
  Switch 9999 to truly live 'develop' branch per user request.

*qtile-0.5-r1 (12 Jan 2013)

  12 Jan 2013; Tim Harder <radhermit@gentoo.org> +qtile-0.5-r1.ebuild,