@@ -11,18 +11,18 @@ EBUILD qtile-0.5-r1.ebuild 1394 SHA256 050d10895a08044fb3d85e25261aad848e43d27d2
 EBUILD qtile-0.6.ebuild 1369 SHA256 3f86eec0dd9f87bdfad5a113aaee498c4319010f5c8fefa47ffb8db870c59304 SHA512 d9409b2dbd1b138957954a4feca8ad0bc0172a313de41c2c6be4001135367bf11558bdd8c60137f808b34748143610027f95f0b677f51459e8c87465b6ae4d56 WHIRLPOOL e41a919348cd921e9dcf92f78dad642f574c4dd24085bdc9856dcdd05dda19664d655c2da8ea52637e85c1f343b932da7556bd559cb4b1df0feefd2a4ed11d42
 EBUILD qtile-0.7.0.ebuild 1488 SHA256 a5cb930c6f0c39b280a41162dea13c157e0dd7fcafe63e07766ab48be76f2a3c SHA512 3d5376680df59877376c1e2df5ee685c1aa9664a70dd34b139f5a213b877a5bfe45ca622a0614666e869f6f78e24fc9b45c544801097e8a8362fee000eef19ea WHIRLPOOL dbe64c3b81d6b95c6be1f97af17e1d999511cc1c84c5be1a15ef6a2436f24e5513a33f9dc5b2fc28d7fabcc44ace9ff359baf73678568d6b2b62c6c220768c88
 EBUILD qtile-0.8.0.ebuild 1488 SHA256 8ddb21663f93ee830b89c79cdbc0ed5fe1f3127f2f0f338a0a3ae97ff8f2b54c SHA512 d5825dbfe5ea7cfb2fb29552fdcf320f99e9570e9f61b2e301ce72eea0979e997099ac00ef8765ec9983bb40dc508b673db0957118a518944eed82bd4c69f506 WHIRLPOOL 755fcb6aeeae71597e508abf456bd92239e105ade5051f65d3bace8468b8e16da0a87d120f9d7b0de28aa995fab3d62398c34d9b51145b501343c9648db8230a
-EBUILD qtile-0.9.1.ebuild 1423 SHA256 a1b5fd56e09f0bcc9784e157c4d5bbf13b4ca737a63bd112d9696932d1ee0963 SHA512 42accebcc1353c4b8b9a7c68972a8681424433ab0a4d0a4c8f54274792bbb9ce220cce7d91d16823a48e1b59dba71a26715d0073669a789d73fe927179620a65 WHIRLPOOL 742468c5e586f298c69624cde770dc2a1bce314900b457d3cbf28a68927cb775f555a3e1c63a1b944d4ffdc4e828e4988e2bea4ee4a737746d976488aec236b4
-EBUILD qtile-9999.ebuild 1423 SHA256 c8c359c74e1fd8464d1dfa355fab95e2a04e2a7eca5513b2de3fc62ef5a2f52e SHA512 48bc381af51d7919f244711a9918a10e2150a3b19576976a9bd5c6e019a05d975f8db65f6fea62549a92b367d3bb7b415e489c5854e0a7d2ab6b02cb37c22cc5 WHIRLPOOL 9d78aedc51553ddfea31bec2a9d5dc852b2f03f77dd281f0986da6e384b6a4c1737c4ced2d4d0c103e8c769fbf1f83a71cb3492a92bdf38dbc61f2b6644656ed
-MISC ChangeLog 2273 SHA256 0977c53e84f3fcedea821ecf77a0d4a17947d863ac0f19daba1e78df95f4000e SHA512 d6d07ada6d27a7f774b84f8fc7a6827c007a992cbd012f1cfd5f04ae29e7cdf7f0ca80fab3f8e68ab394400be2ef2eb68eac05b23efbd47494ae3f0edf88dd02 WHIRLPOOL a24bef00c2cbd9cc7cd7a5ceb3f559e640b43009df163ce6b099bf7772bc042fc6a0e4e4425648fa5f3ff69510b8ff731d77614362a2f55e61e3c46d446a301d
+EBUILD qtile-0.9.1-r1.ebuild 1440 SHA256 8500d0ace907a47533cd9e74429d3447638e4fffe81c4677546a130e63aed640 SHA512 b935c786d7e0e1af541001039059c6024eee01bc61223d7c2c307ee49b49d2dece3cd6d7d4dbb8161dc9dda9ca33883e63d1a4288256d06373f50c6909582063 WHIRLPOOL e2e3f5aa57c5e512c04ce3cad8de63caf25b8a1bd936ba4f0b9a40d23e0e29c04be8161cf68c222040fde22b63ae565921c9521c549649dd644077e707f756e0
+EBUILD qtile-9999.ebuild 1437 SHA256 c165a9bd8fa8a3f1ba8ad03ccd15396f9bfa904603eec22f7f6154814d707414 SHA512 6f3bde5135f4cdb451a4104544c04a8c7917a814d4eeef1d45467227d73537a6a3dcfa89bd4740ed47f14b848be2ca92763fc7e9aaf1029aa225004901c2318d WHIRLPOOL b5d18992287e371c2badd7be9716aa47a8330843bee84a5700e65e446680489113c98a1dad8c7b5dd0300af984c4cca1f1e945bc218db01f8149847a7c15a9ad
+MISC ChangeLog 2445 SHA256 a95ce70ee3cfad95c89989fb1ea3ed52c62c1fda134501869a4b6d35bb72db91 SHA512 d35bca17bf23b5c947b88b4efdc5e346def8d747e91bf1f91fc584b9b1fcddf76c9f45f3e9bc904eab444269b281dad230f98c5994a402175f529154002d8af2 WHIRLPOOL 5ae684f18d8cc5f24226facff1a2ab7cefe40066f3e8685e1f62aa70f77bdc4d4894047b3703de7390278b2771a3674c553bf2f5fc4582ed3bfff1be54df89c0
 MISC metadata.xml 232 SHA256 a778e40f66cb2fa35529e4f45cb8356c8b1b109163cd939396f02e8ea6aa5f1a SHA512 6952f63da1c92a4ed7ddb87b5eb4003d123f0b7af6ffdbc9118159c97ddf18917e8ac7727285a42c07c64e52a40335bc2ef9f17261557617beb8c2226a391873 WHIRLPOOL 0a4441f075f8af01588da2aac3e03732f93463b8bea5e46749d37e1468452735d15f45243b930b3346c93734f8aa235a492030445fee471a95d2c5998f08e7de
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJU7hEcAAoJEEqz6FtPBkyj81EH/i95W2Q8lcHXCpCEU5fz1gpO
-2EnovFCMs6wKHdAPpRqv2rj/P+PG93dqOBERYq6jcjHdViw/qLGuoM2uTXXf/9Jh
-ZC0rwNXoo7kBoBwM80j8ezXhR7XWmmqajDD7htm/6Cc++THDfrhi8SnOHr97++Qm
-6o8WEFt2goq0RKTL2uCnuKxaZHzXJZEaMEN9OK3+9tOJgVNw8BRLRo0oEKR3pICO
-403KArgUhBPbCl4sLt+qZlWgsvRtuDGzlfunJOwl1UD20jM7tLoMrRU7TeeAOxQJ
-BZ6Nwil1d09PyTh88sTyf0shQXgxQNclp8sg8DHgsEZgM3Vc2zbi40UVxuQcZNo=
-=lTxd
+iQEcBAEBCAAGBQJU7nQmAAoJEEqz6FtPBkyjgSUH/3q+8mDqpAl0KLyL+9OrhjZH
+ldhg2DSZssgU5OmhvKk7MdNjZPVCFF98AmfNFf0uqoiBLmWqY0diAWZdmjcR2C9A
+voCoJeIFL3VpW87Z2b7y04gCTGsxj4q5Tw6Q33UehKKrFQHZ1l0o7yd1ydhkIW6i
+49FJz4GmMWG09wI1RFEl9pl55THls8Y2R/SHkvNfXKwwMVUHUZX48waqk3fejYQo
+/xwjQhw/OeVnM0sbmGzRJ48pO8l40d1xmK3TNOVc3apaxyoaI8COIOkvh7Elcr10
+qvsX84KuLPpg5EeLw54XwUbRRcqE83HIAJctzp3S9UCEdyM+PzyjkjrvQjGrIZo=
+=PFJ4
 -----END PGP SIGNATURE-----
