@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/qtile/qtile-0.9.1.ebuild,v 1.1 2015/02/25 18:14:43 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/qtile/qtile-0.9.1-r1.ebuild,v 1.1 2015/02/26 01:17:14 radhermit Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_7,3_4} )
@@ -23,7 +23,7 @@ SLOT="0"
 IUSE="test"
 # docs require sphinxcontrib-blockdiag and sphinxcontrib-seqdiag
 
-RDEPEND="
+RDEPEND="x11-libs/pango
 	>=dev-python/cairocffi-0.6[${PYTHON_USEDEP}]
 	>=dev-python/cffi-0.8.2[${PYTHON_USEDEP}]
 	>=dev-python/six-1.4.1[${PYTHON_USEDEP}]
