@@ -1,6 +1,12 @@
 # ChangeLog for x11-wm/qtile
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/qtile/ChangeLog,v 1.15 2015/02/25 18:14:43 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/qtile/ChangeLog,v 1.16 2015/02/26 01:17:14 radhermit Exp $
+
+*qtile-0.9.1-r1 (26 Feb 2015)
+
+  26 Feb 2015; Tim Harder <radhermit@gentoo.org> -qtile-0.9.1.ebuild,
+  +qtile-0.9.1-r1.ebuild, qtile-9999.ebuild:
+  Add missing pango dep.
 
 *qtile-0.9.1 (25 Feb 2015)
 
